gcc/testsuite/rust.test/fail_compilation/bad_type1.rs
fn main() {
    let logical: bool = 123;
}
